# ical-merge

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.example.json  config.example.toml  docker-compose.yml  mise.toml  release
.github/workflows/: ci.yml  docker.yml
src/: config.rs  error.rs  fetcher.rs  lib.rs  main.rs  merge.rs  server.rs  watcher.rs
src/filter/: mod.rs  modifier.rs  rules.rs  steps.rs
src/ical/: mod.rs  parser.rs  types.rs
tests/: docker_config_reload.rs  integration.rs
tests/fixtures/: england_rugby.ics  holidays.ics  personal.ics  the_fa.ics  work.ics
